# thinkdocs

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  initialize_database.py  pyproject.toml
api/: __init__.py  config.py  database.py  main.py
api/models/: __init__.py  documents.py  users.py
api/routers/: admin.py  auth.py  auth_production.py  chat.py  documents.py  health.py  websocket.py
api/services/: auth.py  cache.py  document_service.py  monitoring.py  user_service.py  vector_db.py
api/tasks/: __init__.py  celery_app.py  document_tasks.py  embedding_tasks.py
data_pipeline/extractors/: base.py  pdf_extractor.py  text_extractor.py
data_pipeline/processors/: text_chunker.py
mlops/docker/: Dockerfile.api  Dockerfile.jupyter
mlops/monitoring/: prometheus.yml
model/embeddings/: service.py
model/llm/: __init__.py  service.py
src/: index.css
storage/chromadb/: .gitkeep
ui/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/layout/: Header.tsx  Sidebar.tsx
ui/src/components/ui/: DocumentUpload.tsx  LoadingSpinner.tsx
ui/src/contexts/: AuthContext.tsx  DocumentContext.tsx  SocketContext.tsx
ui/src/pages/: Chat.tsx  Dashboard.tsx  DocumentViewer.tsx  Documents.tsx  ForgotPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx  Settings.tsx
ui/src/services/: api.ts
